# OpenPCB

./: .gitignore  AGENTS.md  README.md  TODO_LIST.md  openpcb_task_breakdown.md  project.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: README.md  agent-architecture.md  directory_tree.md  mode-action-architecture.md  pcb-pipeline-architecture.md  system-architecture.md
docs/changes/: 2026-03-07_task-breakdown-status-update.md  2026-03-08_local-openpcb-runner.md  2026-03-09_add-deepseek-provider.md  2026-03-09_interactive-cli-repl.md  2026-03-09_llm-integration-openai.md  2026-03-09_readme-reinstall-commands.md  2026-03-10_architecture-refocus-pcb-pipeline.md  2026-03-10_conversation-first-shell-v1-implementation.md  2026-03-10_ignore-tests-demo-local-workspace.md  _TEMPLATE.md
docs/gui/: README.md  architecture.md  roadmap.md  schematic-preview.md
docs/project/: CI_CD.md  README.md  TODO.md  TODO_LIST.md  knowledge-base.md
docs/sdl/: README.md  authoring-guide.md  changelog.md  examples.md  layout-generation.md  object-dictionary.md  overview.md  patch-guide.md  roadmap.md  schematic-generation.md  semantic-rules.md  syntax-spec.md  terminology.md  validation-guide.md
logs/: agent-run-20260309-220606-127456.jsonl  session-20260309-220505-7b60fd64.jsonl  session-20260309-220603-d0dfee3a.jsonl  session-20260309-220627-d49f1a88.jsonl  session-20260309-220750-052cb573.jsonl  session-20260311-083636-fbc6c028.jsonl  session-20260311-083636-fbc90eac.jsonl  session-20260311-083721-5cc3024c.jsonl  session-20260311-083721-64510467.jsonl  session-20260311-083738-28d8801b.jsonl  session-20260311-083738-9e0b3414.jsonl  session-20260311-084306-9da37454.jsonl  session-20260311-084306-c148e438.jsonl  session-20260311-084320-0ea2d9ef.jsonl  session-20260311-084320-5d2732e7.jsonl
openpcb/: __main__.py
openpcb/agent/: __init__.py  (+8 more)
scripts/: use-local-openpcb.ps1
src/gui/src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py
(+247 files in other folders)
