[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpcb"
version = "0.1.0a1"
description = "AI-native PCB CLI toolchain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenPCB Contributors" }]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "build>=1.2,<2.0",
  "ruff>=0.9,<1.0",
]

[project.scripts]
openpcb = "openpcb.cli.main:app"

[tool.setuptools.packages.find]
include = ["openpcb*"]
exclude = ["demo*", "examples*", "tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
